--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+    />
+    <meta
+      name="format-detection"
+      content="telephone=no, address=no, email=no"
+    />
+    <title>Document</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta property="og:title" content="페이지제목" />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="http://URL/" />
+    <meta property="og:image" content="http://URL/image.png" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <script src="/script/script.js"></script>
+  </head>
+  <body></body>
+</html>
